--- a/WebAppService/Areas/Admin/Views/DanhMucHeThong/DanhMucHeThong.cshtml
+++ b/WebAppService/Areas/Admin/Views/DanhMucHeThong/DanhMucHeThong.cshtml
@@ -39,10 +39,12 @@
                 <div class="card-body p-2 pt-0">
                     <table id="tableDanhMucHeThong"
                            data-toggle="table"
+                           data-flat="true"
+                           data-search="true"
+                           data-height="550"
                            data-pagination="true"
                            data-page-size="10"
-                           data-page-list="[5, 10, 15, all]"
-                           data-search="true">
+                           data-page-list="[20, 25, 50, all]">
                         <thead>
                             <tr>
                                 <th data-field="thuTuTg" data-sortable="true">Số thứ tự</th>
