--- a/WebAppService/Areas/Admin/Views/DanhSachNhanSu/DanhSachNhanSu.cshtml
+++ b/WebAppService/Areas/Admin/Views/DanhSachNhanSu/DanhSachNhanSu.cshtml
@@ -21,9 +21,7 @@
                         <button type="button" class="btn btn-info btn-sm" id="btnNewForm" data-bs-toggle="modal" data-bs-target="#bsHoSoCanBo">
                             <i class="ti ti-plus fs-2"></i> Tạo mới bản ghi
                         </button>
-                        <button type="button" class="btn btn-warning btn-sm" data-bs-toggle="modal" data-bs-target="#editer">
-                            <i class="ti ti-search fs-2"></i> Lọc dữ liệu
-                        </button>
+                  
                     </div>
                 </div>
                 <div class="card-body p-2">
@@ -31,10 +29,10 @@
                            data-toggle="table"
                            data-flat="true"
                            data-search="true"
+                           data-height="550"
                            data-pagination="true"
                            data-page-size="10"
-                           data-page-list="[5, 10, 15, all]"
-                           data-url="">
+                           data-page-list="[20, 25, 50, all]">
                         <thead>
                             <tr>
                                 <th data-formatter="fm_editData" data-sortable="true" data-width="5" data-width="5" class="text-center">Chức năng</th>
