--- a/WebAppService/Areas/Admin/Views/TinTucBaiViet/TinTucBaiViet.cshtml
+++ b/WebAppService/Areas/Admin/Views/TinTucBaiViet/TinTucBaiViet.cshtml
@@ -36,9 +36,10 @@
                            data-toggle="table"
                            data-flat="true"
                            data-search="true"
+                           data-height="550"
                            data-pagination="true"
                            data-page-size="10"
-                           data-page-list="[10, 15, 25, all]" data-url="">
+                           data-page-list="[20, 25, 50, all]">
                         <thead>
                             <tr>
                                 <th data-formatter="fm_editData" data-sortable="true" data-width="5"
