--- a/WebAppService/Areas/Admin/Views/Video/Video.cshtml
+++ b/WebAppService/Areas/Admin/Views/Video/Video.cshtml
@@ -28,7 +28,14 @@
                     </div>
                 </div>
                 <div class="card-body p-2">
-                    <table id="tableVideo" data-toggle="table" data-flat="true" data-search="true" data-url="">
+                    <table id="tableVideo"
+                           data-height="550"
+                           data-pagination="true"
+                           data-page-size="10"
+                           data-page-list="[20, 25, 50, all]"
+                           data-toggle="table" 
+                           data-flat="true"
+                           data-search="true">
                         <thead>
                             <tr>
                                 <th data-formatter="fm_editData" data-sortable="true" data-width="5" data-width="5"
