--- a/WebAppService/Views/Blog/Blog.cshtml
+++ b/WebAppService/Views/Blog/Blog.cshtml
@@ -149,7 +149,7 @@
             <article class="col-lg-4 col-6 psi-1 wow fadeIn  animated" style="visibility: visible; animation-name: fadeIn;">
                         <div class="background-white border-radius-10 p-0 mb-30">
                             <div class="post-thumb d-flex mb-15 img-hover-scale">
-                                <a href="/Blog/BlogDetail/{{=it.newsList[i].idBaiViet}}">
+                                <a href="/chi-tiet-bai-viet/{{=it.newsList[i].seoUrl}}">
                                     <img class="img-fluid img-respone-service" src="{{=it.newsList[i].urlImage}}" alt="">
                                 </a>
                             </div>
@@ -158,7 +158,7 @@
                                     <span class="post-in background1 text-secondary font-x-small">{{=it.newsList[i].cbNhomBaiViet}}</span>
                                 </div>
                                 <div class="post-title mb-10 text-limit-3-row">
-                                    <a href="/Blog/BlogDetail/{{=it.newsList[i].idBaiViet}}" class="text-c-3">{{=it.newsList[i].tieuDeBaiViet}}</a>
+                                    <a href="/chi-tiet-bai-viet/{{=it.newsList[i].seoUrl}}" class="text-c-3">{{=it.newsList[i].tieuDeBaiViet}}</a>
                                 </div>
                                 <div class="entry-meta meta-1 flex-column font-x-small text-capitalize mb-10">
                                 <span class="text-bc-8 m-0"> <i class="ti ti-calendar"></i>{{=it.newsList[i].ngayDang}}</span>
@@ -179,7 +179,7 @@
              <article class="p-0 background-white border-radius-10 mb-30 mr-15 wow fadeIn animated">
                     <div class="d-flex">
                         <div class="media-body d-flex mr-15 border-radius-5 img-hover-scale">
-                            <a class="color-white" href="/Blog/BlogDetail/{{=it.newsListm[i].idBaiViet}}">
+                            <a class="color-white" href="/chi-tiet-bai-viet/{{=it.newsListm[i].seoUrl}}">
                                 <img class="border-radius-5 img-head-1" src="{{=it.newsListm[i].urlImage}}" alt="">
                             </a>
                         </div>
@@ -188,7 +188,7 @@
                                 <span class="post-in background1 text-secondary font-x-small">{{=it.newsListm[i].cbNhomBaiViet}}</span>
                             </div>
                             <div class="post-title mb-10 text-limit-3-row">
-                                <a href="/Blog/BlogDetail/{{=it.newsListm[i].idBaiViet}}" class="text-c-3">{{=it.newsListm[i].tieuDeBaiViet}}</a>
+                                <a href="/chi-tiet-bai-viet/{{=it.newsListm[i].seoUrl}}" class="text-c-3">{{=it.newsListm[i].tieuDeBaiViet}}</a>
                             </div>
                             <div class="entry-meta meta-1 flex-column font-x-small text-capitalize mb-10 hide-on-mobile">
                                 <span class="text-c-6 m-0"> <i class="ti ti-calendar"></i> {{=it.newsListm[i].ngayDang}}</span>
@@ -209,7 +209,7 @@
            <article class="p-0 background-white border-radius-10 mb-15 mr-15 wow fadeIn animated">
                 <div class="d-flex">
                     <div class="post-thumb d-flex mr-15 border-radius-5 img-hover-scale">
-                        <a class="color-white" href="/Blog/BlogDetail/{{=it.newsListx[i].idBaiViet}}">
+                        <a class="color-white" href="/chi-tiet-bai-viet/{{=it.newsListx[i].seoUrl}}">
                             <img src="{{=it.newsListx[i].urlImage}}" width="145px" height="115px" alt="">
                         </a>
                     </div>
@@ -218,7 +218,7 @@
                             <span class="post-in background1 text-secondary font-x-small">{{=it.newsListx[i].cbNhomBaiViet}}</span>
                         </div>
 
-                        <small class="post-title font-weight-500 mb-10 text-limit-2-row"><a href="/Blog/BlogDetail/{{=it.newsListx[i].idBaiViet}}" class="text-c-4">{{=it.newsListx[i].tieuDeBaiViet}}</a></small>
+                        <small class="post-title font-weight-500 mb-10 text-limit-2-row"><a href="/chi-tiet-bai-viet/{{=it.newsListx[i].seoUrl}}" class="text-c-4">{{=it.newsListx[i].tieuDeBaiViet}}</a></small>
                         <div class="entry-meta meta-1 flex-column font-x-small text-capitalize mb-10">
                             <span class="text-c-6 m-0"> <i class="ti ti-calendar"></i> {{=it.newsListx[i].ngayDang}}</span>
                             <span class="mr-1 ml-1 text-c-6">|</span>
