--- a/WebAppService/Views/Shared/_Footer.cshtml
+++ b/WebAppService/Views/Shared/_Footer.cshtml
@@ -31,16 +31,16 @@
                 <div class="col-md-3 col-lg-2 col-6">
                     <ul class="float-left mr-30 font-medium">
                         <li class="cat-item cat-item-2 text-c-10 txt-main-footer"><a href="category.html">Sun Medical</a></li>
-                        <li class="cat-item cat-item-3 text-c-9"><a href="/AboutUs/AboutUs">Về chúng tôi</a></li>
-                        <li class="cat-item cat-item-4 text-c-9"><a href="/DichVuDacBiet/DichVuDacBiet">Dịch vụ</a></li>
-                        <li class="cat-item cat-item-5 text-c-9"><a href="/LienHe/LienHe">Đặt lịch</a></li>
-                        <li class="cat-item cat-item-6 text-c-9"><a href="/Doctor/ListDoctor">Tìm bác sĩ</a></li>
-                        <li class="cat-item cat-item-7 text-c-9"><a href="/FAQ/Index">Điều khoản</a></li>
+                        <li class="cat-item cat-item-3 text-c-9"><a href="/about-us">Về chúng tôi</a></li>
+                        <li class="cat-item cat-item-4 text-c-9"><a href="/dich-vu-dac-biet">Dịch vụ</a></li>
+                        <li class="cat-item cat-item-5 text-c-9"><a href="/lien-he">Đặt lịch</a></li>
+                        <li class="cat-item cat-item-6 text-c-9"><a href="/danh-sach-bac-si">Tìm bác sĩ</a></li>
+                        <li class="cat-item cat-item-7 text-c-9"><a href="/cau-hoi-thuong-gap">Điều khoản</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3 col-lg-2 col-6">
                     <ul class="float-left mr-30 font-medium">
-                        <li class="cat-item cat-item-2 text-c-10 txt-main-footer"><a href="category.html">Hỗ trợ</a></li>
+                        <li class="cat-item cat-item-2 text-c-10 txt-main-footer"><a href="/lien-he">Hỗ trợ</a></li>
                         <li class="cat-item cat-item-3 text-c-9"><a href="#">Trung tâm hỗ trợ</a></li>
                         <li class="cat-item cat-item-4 text-c-9"><a href="#">Dịch vụ 24/7</a></li>
                         <li class="cat-item cat-item-5 text-c-9"><a href="#">Chat với chúng tôi</a></li>
@@ -48,7 +48,7 @@
                 </div>
                 <div class="col-md-12 col-lg-3 col-12">
                     <ul class="float-left mr-30 font-medium">
-                        <li class="cat-item cat-item-2 text-c-10 txt-main-footer"><a href="category.html">Liên hệ</a></li>
+                        <li class="cat-item cat-item-2 text-c-10 txt-main-footer"><a href="/lien-he">Liên hệ</a></li>
                         <li class="cat-item cat-item-3 text-c-9">
                             <a href="tel:18008005">
                                 <svg width="13" height="13" class="text-black" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
