--- a/WebAppService/Areas/Admin/Views/DichVuDacBiet/DichVuDacBiet.cshtml
+++ b/WebAppService/Areas/Admin/Views/DichVuDacBiet/DichVuDacBiet.cshtml
@@ -28,14 +28,21 @@
                     </div>
                 </div>
                 <div class="card-body p-2">
-                    <table id="tableDichVuDacBiet" data-toggle="table" data-flat="true" data-search="true" data-url="">
+                    <table id="tableDichVuDacBiet"
+                           data-toggle="table"
+                           data-flat="true"
+                           data-search="true"
+                           data-height="550"
+                           data-pagination="true"
+                           data-page-size="10"
+                           data-page-list="[20, 25, 50, all]">
                         <thead>
                             <tr>
                                 <th data-formatter="fm_editData" data-sortable="true" data-width="5" data-width="5"
                                     class="text-center">Chức năng</th>
                                 <th data-field="urlImage" data-width="8" data-formatter="fm_Image" data-sortable="true">Ảnh</th>
                                 <th data-field="tieuDeBaiViet" data-sortable="true">Tên tiêu đề</th>
-                                <th data-field="moTaNgan" data-sortable="true">Mô tả ngắn</th>
+                                <th data-field="moTaNgan" data-sortable="true" data-formatter="fm_MoTaNgan">Mô tả ngắn</th>
                                 <th data-field="seoUrl" data-sortable="true">Seo Url</th>
                                 <th data-field="tieuDeNgan" data-sortable="true" data-formatter="fm_UrlFile">Đường dẫn Icon</th>
                                 <th data-field="seoTittile" data-width="8" data-sortable="true" data-formatter="fm_SeoTittile">Hiển thị ở trang chủ</th>
