--- a/WebAppService/Areas/Admin/Views/Slider/Slider.cshtml
+++ b/WebAppService/Areas/Admin/Views/Slider/Slider.cshtml
@@ -1,17 +1,16 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "Slider";
     Layout = "~/Areas/Admin/Views/Shared/_ViewAdmin.cshtml";
 }
 <style>
-    .group-by{
+    .group-by {
         background: #0d83c8a8;
         color: white !important;
     }
 
-    .group-by td{
-        color:white
-    }
+        .group-by td {
+            color: white
+        }
 </style>
 @section Scripts {
     <script src="https://unpkg.com/bootstrap-table@1.24.0/dist/extensions/group-by-v2/bootstrap-table-group-by.min.js"></script>
@@ -27,20 +26,28 @@
                 <div class="card-header p-1">
                     <div class="form-group">
                         <button type="button" class="btn btn-info btn-sm" id="btnNewForm" data-bs-toggle="tooltip" data-bs-placement="top" title="Thêm mới Slider">
-                            <i class="ti ti-plus fs-2"></i> Tạo mới 
+                            <i class="ti ti-plus fs-2"></i> Tạo mới
                         </button>
                     </div>
                 </div>
                 <div class="card-body p-2">
-                    <table id="tableSlider" data-toggle="table" data-flat="true" data-search="true" data-group-by="true"
+                    <table id="tableSlider"
+                           data-search="true"
+                           data-group-by="true"
+                           data-height="550"
+                           data-pagination="true"
+                           data-page-size="10"
+                           data-page-list="[20, 25, 50, all]"
+                           data-toggle="table"
+                           data-flat="true"
                            data-group-by-field="cbGiaoDien">
                         <thead>
                             <tr>
-                                <th data-formatter="fm_editData" data-sortable="true" data-width="5" >Xóa</th>
+                                <th data-formatter="fm_editData" data-sortable="true" data-width="5">Xóa</th>
                                 <th data-field="" data-width="8" data-sortable="true" data-formatter="fm_Image">Ảnh</th>
                                 <th data-field="SapXep" data-width="8" data-formatter="fm_SapXep" data-events="ev_SapXep">Số thứ tự</th>
                                 <th data-field="TxtCard1" data-sortable="true" data-formatter="fm_UrlFile">Đường dẫn ảnh</th>
-                                <th data-field="CbGiaoDien" data-sortable="true" data-formatter="fm_CbGiaoDien" >Phân loại thiết bị</th>
+                                <th data-field="CbGiaoDien" data-sortable="true" data-formatter="fm_CbGiaoDien">Phân loại thiết bị</th>
                                 <th data-field="IsCongKhai" data-width="8" data-sortable="true" data-formatter="fm_IsCongKhai">Công khai</th>
                             </tr>
                         </thead>
