--- a/WebAppService/Views/Blog/BlogDetail.cshtml
+++ b/WebAppService/Views/Blog/BlogDetail.cshtml
@@ -46,7 +46,7 @@
                             <article class="p-0 background-white border-radius-10 mb-15 mr-0  fadeIn animated">
                                 <div class="d-flex">
                                     <div class="post-thumb d-flex mr-15 border-radius-5 img-hover-scale">
-                                        <a class="color-white" href="single.html">
+                                        <a class="color-white" href="#">
                                             <img src="@item.UrlImage" width="115px" height="100%" alt="">
                                         </a>
                                     </div>
