--- a/WebAppService/Views/Blog/BlogList.cshtml
+++ b/WebAppService/Views/Blog/BlogList.cshtml
@@ -287,13 +287,13 @@
          <article class="col-lg-4 col-6 mb-4 psi-1 wow fadeIn animated" style="visibility: visible; animation-name: fadeIn;">
             <div class="background-white p-0 pb-10 mb-5 box-shadow-img card-hover card-active">
                 <div class="post-thumb d-flex mb-15 img-hover-scale">
-                    <a href="/Blog/BlogDetail/{{=it.newsList[i].idBaiViet}}">
+                    <a href="/chi-tiet-bai-viet/{{=it.newsList[i].seoUrl}}">
                         <img src="{{=it.newsList[i].urlImage || '/root/6388000.png'}}" class="img-fluid img-respone-service" alt="" />
                     </a>
                 </div>
                 <div class="pl-10 pr-10">
                     <div class="post-title mb-5 text-limit-c-row">
-                        <a href="/Blog/BlogDetail/{{=it.newsList[i].idBaiViet}}" class="text-c-3">{{=it.newsList[i].tieuDeBaiViet}}</a>
+                        <a href="/chi-tiet-bai-viet/{{=it.newsList[i].seoUrl}}" class="text-c-3">{{=it.newsList[i].tieuDeBaiViet}}</a>
                     </div>
                     <div class="">
                         <p class="post-exerpt text-c-2 text-limit-c-row">{{=it.newsList[i].moTaNgan}}</p>
