--- a/WebAppService/Views/DanhSachVideo/DanhSachVideo.cshtml
+++ b/WebAppService/Views/DanhSachVideo/DanhSachVideo.cshtml
@@ -1,19 +1,108 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "DanhSachVideo";
 }
-<link href="~/web/assets/css/service.css" rel="stylesheet" />
-@section Scripts {
+<link href="~/web/assets/css/home.css" rel="stylesheet" />
 
+@section Scripts {
+    <script src="~/web/assets/js/dot.js"></script>
+    <script>
+        var myClient = {
+            currentPage: 1,
+            pageSize: 12,
+
+            init: function(){
+                myClient.Event();
+                myClient.LoadData();
+            },
+
+             Event: function () {
+                $(document).on('click', '.page-link', function () {
+                    var page = $(this).data("page");
+                    myClient.currentPage = page;
+                    myClient.LoadData();
+                });
+
+                $("#btnSearch").off("click").on("click", function () {
+                    myClient.LoadData();
+                });
+            },
+
+             LoadData: function () {
+                var txtSearh =  $("#txtSearh").val();
+                $.ajax({
+                    url: '/DanhSachVideo/LoadData',
+                    type: "GET",
+                    data: {
+                        page: myClient.currentPage,
+                        pageSize: myClient.pageSize,
+                        txtSearh:txtSearh,
+                    },
+                    dataType: "json",
+                    success: function (data) {
+                        if (data.status == true) {
+
+                            if (data.lstData != null) {
+                                var template = doT.template($("#news-template").html());
+                                $("#list_bai_viet").html(template({ newsList: data.lstData }));
+                            }
+                             $('.play-video').magnificPopup({
+                                       type: "iframe",
+                                        mainClass: "mfp-fade",
+                                        removalDelay: 160,
+                                        preloader: true,
+                                        fixedContentPos: false
+                                });
+                            var totalPages = Math.ceil(data.totalRow / myClient.pageSize);
+                            myClient.RenderPagination(totalPages);
+                        }
+                    }
+                });
+            },
+
+            RenderPagination: function (totalPages) {
+                var pagination = '';
+                for (var i = 1; i <= totalPages; i++) {
+                    pagination += '<li class="page-item ' + (i === myClient.currentPage ? 'active' : '') + '">' +
+                        '<a class="page-link" href="javascript:void(0)" data-page="' + i + '">' + i + '</a></li>';
+                }
+                $("#pagination").html('<ul class="pagination justify-content-center">' + pagination + '</ul>');
+            },
+
+        }
+        myClient.init();
+    </script>
 }
 <div class="entry-header entry-header-2 mb-3 mt-0 text-center">
     <div class="thumb-overlay img-hover-slide position-relative" style="background-image: url(/web/assets/imgs/farme.png)">
     </div>
 </div>
-<div class="container px-30 py-2 container-mobile">
+<div class="container py-2 container-mobile">
     <div class="row mt-5 pxs-3">
-   
-
+        <div class="message-client">
+            <div class="archive-header text-center mb-20 mt-0">
+                <div class="container">
+                    <div>
+                        <span class="text-head-breadcrumb text-ic-5">
+                            <span class="text-primary">Video</span> Tại SunMedical
+                        </span>
+                    </div>
+                    <div class="row">
+                        <div class="col-12" style="display:flex">
+                            <input type="text" class="form-control form-control-sm w-100" id="txtSearh" placeholder="Tìm kiếm Video ..." name="x" value="" />
+                            <a href="#" class="main-menu btn-sm btn-orrange" id="btnSearch" style="place-content: center;"><i class="ti ti-search" style="font-size:14px"></i></a>
+                        </div>
+                    </div>
+                    <div class="row mt-30" id="list_bai_viet">
+                    </div>
+                    <div class="pagination-area mb-30">
+                        <nav aria-label="Page navigation example">
+                            <ul class="pagination justify-content-center" id="pagination">
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- Câu chuyện của khách hàng -->
         <div class="message-client">
             <div class="container px-30 py-2 container-mobile">
@@ -176,3 +265,24 @@
         </div>
     </div>
 </div>
+
+<script id="news-template" type="text/x-dot-template">
+    {{ for(var i = 0; i < it.newsList.length; i++) { }}
+        <div class="col-lg-4 col-md-6 mb-20">
+            <div class="slider-single col-12 p-0 position-relative md-mb-15" id="list_bai_viet1">
+                <div class="img-hover-scale border-radius-10 position-relative overflow-hidden">
+                    <a href="#">
+                        <img class="border-radius-10 w-100" src="{{=it.newsList[i].urlImage}}" height="100%" alt="post-slider">
+                    </a>
+                    <div class="video-overlay position-absolute top-0 start-0 w-100 h-100"></div> <div class="play_btn play_btn_small position-absolute top-50 start-50 translate-middle">
+                        <a class="play-video" href="{{=it.newsList[i].urlVideo}}" data-animate="zoomIn" data-duration="1.5s" data-delay="0.1s">
+                            <div class="custom-play-button"> <i class="fa fa-play"></i> </div>
+                        </a>
+                    </div> <div class="video-caption position-absolute bottom-0 start-0 w-100 text-white px-3 py-2">
+                        <p class="mb-0 fw-semibold text-white">{{=it.newsList[i].tieuDeBaiViet}}</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    {{ } }}
+</script>
