--- a/WebAppService/wwwroot/assets/css/custom.css
+++ b/WebAppService/wwwroot/assets/css/custom.css
@@ -64,7 +64,7 @@
 .form-control {
     display: block;
     width: 100%;
-    padding: 7px 12px;
+    padding: 5px 12px;
     font-size: .875rem;
     font-weight: 400;
     line-height: 1.4;
@@ -72,10 +72,10 @@
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-    background-color: transparent;
+    background-color: #16151500;
     background-clip: padding-box;
-    border: var(--bs-border-width) solid #ced7df;
-    border-radius: 11px;
+    border: var(--bs-border-width) solid #b8bfc3;
+    border-radius: 5px;
     box-shadow: var(--bs-box-shadow-inset);
     transition: border-color .15sease-in-out, box-shadow .15sease-in-out;
 }
@@ -87,4 +87,14 @@
     border-radius: 0px !important;
     color: #fff !important;
     background-color: rgb(77 93 118) !important;
+}
+.text-limit-2 {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: normal;
+    max-width: 250px;
+    cursor: pointer;
 }
