--- a/WebAppService/wwwroot/assets/css/styles.css
+++ b/WebAppService/wwwroot/assets/css/styles.css
@@ -30822,7 +30822,7 @@ fieldset:disabled .btn {
 
 .text-success {
     --bs-text-opacity: 1;
-    color: rgba(var(--bs-success-rgb), var(--bs-text-opacity)) !important;
+    color: rgb(1 136 33) !important;
 }
 
 .text-info {
@@ -30837,7 +30837,7 @@ fieldset:disabled .btn {
 
 .text-danger {
     --bs-text-opacity: 1;
-    color: rgba(var(--bs-danger-rgb), var(--bs-text-opacity)) !important;
+    color: rgb(251 70 70) !important;
 }
 
 .text-light {
